Bug 633679 - Quick filter button / menuitem shouldn't be invisible when disabled. r=mconley, ui-r=mconley.

--- a/mail/themes/qute/mail/primaryToolbar.css
+++ b/mail/themes/qute/mail/primaryToolbar.css
@@ -670,15 +670,16 @@ toolbar[iconsize="small"] #button-archive[disabled] {
 #tabbar-toolbar .toolbarbutton-1[open="true"],
 #tabbar-toolbar .toolbarbutton-menubutton-button:hover:active:not([disabled]),
 #tabbar-toolbar .toolbarbutton-menubutton-button[open="true"] {
+  padding-top: 4px;
   padding-bottom: 2px;
 }
 
 #tabbar-toolbar .toolbarbutton-1[checked="true"] {
+  padding-top: 4px !important;
   padding-bottom: 2px !important;
 }
 
 #palette-box #qfb-show-filter-bar {
-  visibility: visible !important;
   list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.png");
   -moz-image-region: rect(0px 504px 24px 480px);
 }
